2006-09-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	* src/baobab-prefs.c: (create_tree_props):

	HIG fix:  Use title capitalization for column headers
	
2006-09-09  Fabio Marzocca  <thesaltydog@gmail.com>

	* AUTHORS:
	* README:
	* TODO:
	* data/baobab.1:
	* help/C/baobab.xml:

	Removed any reference to file-search functionality in docs

2006-09-09  Fabio Marzocca  <thesaltydog@gmail.com>

	* pixmaps/24x24/.cvsignore:
	* pixmaps/scalable/.cvsignore:

	Added cvsignore

2006-09-09  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (create_props_model), (create_tree_props),
	(fill_props_model):
	* src/baobab-prefs.h:

	Added filesystem type in preferences dialog

2006-08-27  Dennis Cranston  <dennis_cranston@yahoo.com>

	BUGZILLA: #349187, #350457, #351185, #351534, #351538, #351540, 
	#351544, #351545, #351546, #352147 and #351532. 

	* data/baobab.glade: Remove search dialog and tab.  More HIG 
	related fixes for the graphical usage map window. Add a scan home 
	directory item to menu and toolbar.  Add expand all and collapse 
	items all items to edit menu.  In the preference dialog, add a 
	help button and rephrase a some strings.  Add a stop menu item to 
	the view menu.
	* data/baobab.dekstop.in.in: Change tooltip to match style used
	in GNOME.
	* data/baobab.schemas.in:  Don't show the statusbar by default.
	* src/Makefile.am: Add baobab-spinner.[ch]
	* src/baobab-spinner.[ch]: New files for spinner widget.
	* src/baobab-graphwin.c: (graph_save_cb): HIG fixes for the save
	snapshot dialog, (baobab_graphwin_create):  HIG fixes for window
	title.
	* src/baobab-prefs.c: (props_notify): remove, (response_cb): Add
	filechooser callback to handle the close and help responses,
	(create_props):  Connect to the response signal.
	* src/baobab-remote-connect-dialog.c: (remote_connect): HIG fixes,
	(setup_for_type): Get entries from required or optional table,
	(baobab_remote_connect_dialog_init): HIG fixes for remote scan